Change javascript link name

--- a/index.html
+++ b/index.html
@@ -8,10 +8,17 @@
 </head>
 
 <body>
-    <button id="size">Grid size</button>
+    <div id="toolbar">
+        <form>
+            <input type="text" id="gridsize" name="gridsize"><br>
+            <label for="gridsize">input a grid size between 2 and 100</label><br>
+        </form>
+    </div>
+
+
     <div id="container"></div>
 </body>
 
-<script src="etch-a-sketch.js"></script>
+<script src="script.js"></script>
 
 </html>
