Add buttons for pen modes

--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
 
 <body>
     <div id="toolbar">
+        <button>Black</button>
+        <button>Eraser</button>
+        <button>Rainbow</button>
         <form>
             <input type="text" id="gridsize" name="gridsize"><br>
-            <label for="gridsize">input a grid size between 2 and 100</label><br>
+            <label for="gridsize">Set size</label><br>
         </form>
     </div>
 
-
-    <div id="container"></div>
+    <div id="board"></div>
 </body>
 
 <script src="script.js"></script>
