Edit 'random' button to 'rainbow'

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="toolbar">
         <button onclick="changeColour('black')">Black</button>
         <button onclick="changeColour('white')">Eraser</button>
-        <button onclick="changeColour(randomColour())">Random</button>
+        <button onclick="changeColour(randomColour())">Rainbow</button>
         <form>
             <input type="text" id="gridsize" name="gridsize"><br>
             <button>Set size</button>
