Add div sections for buttons and toolbar

--- a/index.html
+++ b/index.html
@@ -8,18 +8,22 @@
 </head>
 
 <body>
-    <div id="toolbar">
-        <button onclick="changeColour('black')">Black</button>
-        <button onclick="changeColour('white')">Eraser</button>
-        <button onclick="changeColour('rainbow')">Rainbow</button>
-        <button onclick="reset()">Clear</button>
-        <br>
-        <input type="text" id="gridsize" value="" />
-        <br />
-        <button onclick="changeGridSize(gridSize())" id="gridsizeButton">Set Grid Size</button>
-    </div>
+    <div id="container">
+        <h1>Etch-A-Sketch</h1>
+        <div id="toolbar">
+            <div id="buttons">
+                <button onclick="changeColour('black')">Black</button>
+                <button onclick="changeColour('white')">Eraser</button>
+                <button onclick="changeColour('rainbow')">Rainbow</button>
+                <button onclick="reset()">Clear</button>
+            </div>
 
-    <div id="board"></div>
+            <input type="text" id="gridsize" value="" />
+
+            <button onclick="changeGridSize(gridSize())" id="gridsizeButton">Set Grid Size</button>
+        </div>
+        <div id="board"></div>
+    </div>
 </body>
 
 <script src="script.js"></script>
