--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
     <div id="container">
         <h1>Etch-A-Sketch</h1>
         <div id="toolbar">
-            <div id="buttons">
+            <div class="buttons">
                 <button onclick="changeColour('black')">Black</button>
                 <button onclick="changeColour('white')">Eraser</button>
                 <button onclick="changeColour('rainbow')">Rainbow</button>
                 <button onclick="reset()">Clear</button>
             </div>
+            <div class="buttons">
+                <input type="text" id="gridsize" value="" />
+                <button onclick="changeGridSize(gridSize())" id="gridsizeButton">Set Grid Size</button>
+            </div>
 
-            <input type="text" id="gridsize" value="" />
-
-            <button onclick="changeGridSize(gridSize())" id="gridsizeButton">Set Grid Size</button>
         </div>
         <div id="board"></div>
     </div>
